Add notification system - API endpoints and MongoDB model

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "node-cache": "^5.1.2",
+    "socket.io": "^4.8.1",
     "stripe": "^19.1.0"
   }
 }
